[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.4.11-rc.1", features = ["json"]}
tokio = {version = "1.12.0", features = ["full"]}   
chrono = {version = "0.4.19", features = ["serde"]}
serde = {version = "1.0.130", features = ["derive"]}
surrealdb = {version = "0.1.0", path = "../surrealdb"}
thiserror = "1.0.30"
